<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <ImageView
	        android:id="@+id/imgImage"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"/>
        
        <EditText
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:padding="5dp" />
        
        <RelativeLayout
            android:id="@+id/bottom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_footer"
            android:padding="3dp" >
			
	        <Button
	            style="@style/ButtonText"
	            android:id="@+id/btnCancel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="cancelButtonHandler"
	            android:text="@string/back" 
	            android:background="@drawable/btn_yellow">
	        </Button>
	        
	        <Button
	            style="@style/ButtonText"
	            android:id="@+id/btnTakePhoto"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:onClick="takePhotoHandler"
	            android:text="@string/takePhoto"
	            android:background="@drawable/btn_yellow">

	        </Button>
	
	        <Button
	            style="@style/ButtonText"
	            android:id="@+id/btnAccept"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentEnd="true"
	            android:onClick="acceptButtonHandler"
	            android:text="@string/accept"
	            android:background="@drawable/btn_blue">

	        </Button>
	        
	    </RelativeLayout>
        
    </LinearLayout>

</RelativeLayout>